Fixed bug where h4 did not wrap on narrow screens.

--- a/css/structure.css
+++ b/css/structure.css
@@ -29,7 +29,7 @@ nav {
 
 main {
   flex: 1;
-  max-width: 60rem;
+  max-width: 60%;
   margin: 0 auto;
   padding: 1rem;
 }
